Bug 1918906 - Set `TriggerByScript` to AnchorScrollFlags to ignore scroll anchor adjustments during (smooth) scrolling to anchor. r=botond

Since bug 1789930 we have allowed scroll anchor adjustments during scroll
operations by user. To tell whether the given scroll operation is done by user
or by script, we introduced ScrollFlags::TriggerByScript. Though scrolling to
anchor is kinda user triggered scroll operation, it would make sense to not allow
scroll anchor adjustments during scrolling to anchor.

Differential Revision: https://phabricator.services.mozilla.com/D224284